Improved charting page. Dynamic height, aligned widgets, repaired legend.

--- a/src/application/web-client/src/main/webapp/css/hbird-base.css
+++ b/src/application/web-client/src/main/webapp/css/hbird-base.css
@@ -304,6 +304,10 @@ Modals
 -------------------------------------------------
 */
 
+.container {
+	height: 100%;	
+}
+
 .md-modal {
 	font-family: 'lato';
 	visibility: hidden;
